# Restore_portal

./: README.md  createbackup.txt  deploy.ps1  pyproject.toml  requirements.txt  run.py  test_con.py  updatetestbd.txt  web.config
app/: __init__.py  admin_ops.py  auth.py  config_loader.py  crypto_utils.py  db_actions.py  db_ops.py  db_utils.py  email_sender.py  logger_db.py  onec_commands.py  onec_integration.py  queue.py
app/services/: __init__.py  worker.py
config/: app_config.json
docs/: admin.md  user.md
scripts/: backup_task.py  create_svc_db.sql  migrate_configs.py  parse_cluster_info.py
scripts/configs/: backup.json  common.json  user_dunaev.json  user_gorbunov.json  user_ivanov.json  user_koh.json  user_nikitaeva.json  user_petuhov.json  user_sazanov.json  user_suhenko.json
static/: style.css
templates/: base.html  dashboard.html  index.html  profile.html  user_1c_logs.html  user_backups.html  user_logs.html  user_settings.html
templates/admin/: base.html  databases.html  edit_global_limit.html  edit_global_setting.html  edit_user.html  edit_user_db.html  full_logs.html  global_limits.html  global_settings.html  index.html  logs.html  settings.html  users.html
